tests/toy/neg/001538_mutation.toylang
program a = { var var : bool; } .
